# cli-sys-optimizer

./: .gitignore  PKGBUILD  README.md
cli_sys_optimizer.egg-info/: PKG-INFO  SOURCES.txt
optimizer/: actions.py  cli.py  profile.py  suggest.py
optimizer-1.0.0/: pyproject.toml
optimizer-1.0.0/src/optimizer/: cli.py  monitor.py  process_manager.py  startup_manager.py  suggest.py  system_operations.py
src/cli_system_optimizer.egg-info/: SOURCES.txt  entry_points.txt
