[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-sys-optimizer"
version = "1.0.0"
description = "A CLI tool for monitoring and optimizing system resources."
authors = [
    { name = "Pankaj Kumar", email = "pankajbishnoi2001@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
    "click",
    "psutil",
]
scripts = { optimizer = "optimizer.cli:cli" }
